Handle subscriptions in hateoas way
